[gd_scene load_steps=5 format=3 uid="uid://bopd8ltnba6ol"]

[ext_resource type="Script" path="res://scripts/Spawn1.gd" id="1_aj15q"]
[ext_resource type="PackedScene" uid="uid://q7ihls12mnkk" path="res://Spiritbullet.tscn" id="2_x2fx5"]
[ext_resource type="PackedScene" uid="uid://blfh21paqm1mx" path="res://Healthbar.tscn" id="4_mpnp8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4ioo3"]
radius = 64.0

[node name="Bossbody" type="CharacterBody2D" node_paths=PackedStringArray("firetimer")]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_aj15q")
bullet_scene = ExtResource("2_x2fx5")
firetimer = NodePath("CollisionShape2D/Firetimer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(140, 0)
scale = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_4ioo3")
metadata/Spawn = true
metadata/Tile = true

[node name="ColorRect" type="ColorRect" parent="CollisionShape2D"]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(1, 1, 1, 0.6)
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="CollisionShape2D"]
offset_left = 9.0
offset_top = -3.0
offset_right = 23.0
offset_bottom = 11.0
scale = Vector2(0.5, 0.5)
color = Color(1, 1, 1, 0.6)
metadata/_edit_use_anchors_ = true

[node name="Firetimer" type="Timer" parent="CollisionShape2D"]
wait_time = 1.5

[node name="Boss_bullet_spawn" type="Node2D" parent="CollisionShape2D"]
position = Vector2(43, 0)

[node name="Weaktimer" type="Timer" parent="CollisionShape2D"]
wait_time = 0.6
one_shot = true

[node name="Area2D2" type="Area2D" parent="CollisionShape2D"]
scale = Vector2(0.5, 0.5)
metadata/Spawn = true
metadata/Tile = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D/Area2D2"]
scale = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_4ioo3")
metadata/Spawn = true
metadata/Tile = true

[node name="Healthbar" parent="." instance=ExtResource("4_mpnp8")]
offset_left = 126.0
offset_top = -12.0
offset_right = 156.0
offset_bottom = -8.0
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="CollisionShape2D/Firetimer" to="." method="_on_firetimer_timeout"]
[connection signal="timeout" from="CollisionShape2D/Weaktimer" to="." method="_on_weaktimer_timeout"]
[connection signal="area_entered" from="CollisionShape2D/Area2D2" to="." method="_on_area_2d_area_entered"]
